# gcloud-fastapi

./: Dockerfile  app.py  pyproject.toml
