[tool.poetry]
name = "cloud-run-demo"
version = "0.1.0"
description = ""
authors = ["Liam Gower <lee.gower17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
